Bug #35378 USS: Start network in chroot
Start service networking instead of calling "ifup -a", which did not
create the missing /var/networking/ directory.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53071 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.29-3) unstable; urgency=low
+
+  * Bug #35378: Start network in chroot
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 27 Aug 2014 08:50:41 +0200
+
 univention-system-setup (8.0.29-2) unstable; urgency=low
 
   * Bug #35378: Merge di-univention-system-setup package
