--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.0-14) unstable; urgency=low
+
+  * Bug #35659: Include xterm as default x-terminal-emulator
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 27 Aug 2014 12:33:44 +0200
+
 univention-dvd (0.2.0-13) unstable; urgency=low
 
   * Bug #35659: Install recommended packages
