--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (8.0.12-1) unstable; urgency=low
+
+  * moved hosteddomains.py to u-m-postfix (Bug #35232)
+
+ -- Felix Botner <botner@univention.de>  Wed, 27 Aug 2014 14:07:04 +0200
+
 univention-mail-postfix (8.0.11-3) unstable; urgency=low
 
   * added mail/postfix/ldaptable/debuglevel and
