--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (9.0.0-3) unstable; urgency=low
+
+  * moved hosteddomains.py to u-m-postfix (Bug #35232) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 27 Aug 2014 14:43:28 +0200
+
 univention-mail-postfix (9.0.0-2) unstable; urgency=medium
 
   * Update to UCS 4.0 (Bug #35264)
