* Bug #35685: hide also nameservers in installation mode
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53091 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.30-1) unstable; urgency=low
+
+  * Bug #35685: hide also nameservers in installation mode
+
+ -- Florian Best <best@univention.de>  Wed, 27 Aug 2014 15:00:57 +0200
+
 univention-system-setup (8.0.29-3) unstable; urgency=low
 
   * Bug #35378: Start network in chroot
