--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.31-1) unstable; urgency=low
+
+  * Bug #35378: clean /etc/apt/sources.list
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 27 Aug 2014 15:06:18 +0200
+
 univention-system-setup (8.0.30-1) unstable; urgency=low
 
   * Bug #35685: hide also nameservers in installation mode
