* Bug #35654: version bump
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53099 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.0.3-2) unstable; urgency=low
+
+  * Bug #35654: version bump
+
+ -- Florian Best <best@univention.de>  Wed, 27 Aug 2014 16:25:02 +0200
+
 univention-management-console-frontend (4.0.3-1) unstable; urgency=low
 
   * Bug #35685: fix hasPrevious() hasNext() next() and previous() methods for
