updated translation (Bug #32842)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53101 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/umc/de.po
+++ b/virtualization/univention-virtual-machine-manager-daemon/umc/de.po
@@ -19,7 +19,7 @@ msgid "Virtual machines (UVMM)"
 msgstr "Virtuelle Maschinen (UVMM)"
 
 msgid "Manages Cloud Connections"
-msgstr "Verwaltung von Cloud-Zugangsdaten"
+msgstr "Verwaltung von Cloud-Verbindungen"
 
 msgid "Cloud Connections (UVMM)"
-msgstr "Cloud-Zugangsdaten (UVMM)"
+msgstr "Cloud-Verbindungen (UVMM)"
