--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.69-52) unstable; urgency=low
+
+  * Bug #35587: fix suggestion of FQDN build from value entered in the
+  	organization field
+
+ -- Florian Best <best@univention.de>  Thu, 28 Aug 2014 08:42:31 +0200
+
 univention-system-setup (7.0.69-51) unstable; urgency=low
 
   * Bug #35601: Fixed "always-on DHCP"
