* Bug #35587: fix suggestion of FQDN build from value entered in the organization field
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53108 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.0.32-1) unstable; urgency=low
+
+  * Bug #35587: fix suggestion of FQDN build from value entered in the
+    organization field
+
+ -- Florian Best <best@univention.de>  Thu, 28 Aug 2014 08:52:07 +0200
+
 univention-system-setup (8.0.31-1) unstable; urgency=low
 
   * Bug #35378: clean /etc/apt/sources.list
