Bug #35107 UVMM: Fix paused VM handling
Fix one mistyped PAUSE[+D+].
Show VNC button for paused VMs.
Simplify canExecute.
Fix canStart().
Allow paused VMs to be shut-down.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53113 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.18-1) unstable; urgency=low
+
+  * Bug #35107: Fix handling of paused VMs.
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 28 Aug 2014 11:54:37 +0200
+
 univention-virtual-machine-manager-daemon (3.0.17-14) unstable; urgency=low
 
   * Bug #35107: Revert
