* ignore tar "file changed as we read it" warning in     univention-samba4-backup (Bug #35392)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53118 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (4.0.0-5) unstable; urgency=low
+
+  * ignore tar "file changed as we read it" warning in 
+    univention-samba4-backup (Bug #35392)
+
+ -- Felix Botner <botner@univention.de>  Thu, 28 Aug 2014 12:57:45 +0200
+
 univention-samba4 (4.0.0-4) unstable; urgency=medium
 
   * LDB_MODULES_PATH=/usr/lib/ldb is not valid any longer with multi-arch
