fixed default nofile limit (Bug #32415)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53119 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-31) unstable; urgency=low
+
+  * fixed default nofile limit (Bug #32415) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 28 Aug 2014 14:47:24 +0200
+
 univention-pam (7.0.4-30) unstable; urgency=medium
 
   * Trigger well-known-sid-name-mapping on SID changes (Bug #35501)
