--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-64) unstable; urgency=low
+
+  * Bug #35729: Fix stall in dpkg status pipe reading code
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 28 Aug 2014 12:43:18 +0200
+
 univention-lib (3.0.26-63) unstable; urgency=medium
 
   * Fix log from make_deleted_objects_readable_for_this_machine (Bug #35566)
