fixed default nofile limit (Bug #32415)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53124 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (8.0.1-2) unstable; urgency=low
+
+  * fixed default nofile limit (Bug #32415) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 28 Aug 2014 15:12:28 +0200
+
 univention-pam (8.0.1-1) unstable; urgency=low
 
   * Update to UCR templates to new upstream versions (Bug #35138)
