don't overwrite join.log on slaves (Bug #34909)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53126 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-join/debian/changelog
+++ b/management/univention-join/debian/changelog
@@ -1,3 +1,9 @@
+univention-join (6.0.18-12) unstable; urgency=low
+
+  * don't overwrite join.log on slaves (Bug #34909) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 28 Aug 2014 15:26:51 +0200
+
 univention-join (6.0.18-11) unstable; urgency=low
 
   [ Felix Botner ]
