* Bug #35683: Add a starting archive for ini files that can be unpackaged even without network connection
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53127 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (4.0.0-3) unstable; urgency=low
+
+  * Bug #35683: Add a starting archive for ini files that can be unpackaged
+    even without network connection
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 28 Aug 2014 15:29:08 +0200
+
 univention-management-console-module-appcenter (4.0.0-2) unstable; urgency=low
 
   * Bug #35565: commit installed apps files upon UCRV
