don't overwrite join.log on slaves (Bug #34909)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53129 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-join/debian/changelog
+++ b/management/univention-join/debian/changelog
@@ -1,3 +1,9 @@
+univention-join (7.0.0-4) unstable; urgency=low
+
+  * don't overwrite join.log on slaves (Bug #34909) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 28 Aug 2014 15:32:32 +0200
+
 univention-join (7.0.0-3) unstable; urgency=medium
 
   * Call samba-ad-dc init script instead of samba4 (Bug #35319)
