skip writing cache if process has no write permission (Bug #35368)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53135 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (9.0.6-10) unstable; urgency=low
+
+  * skip writing cache if process has no write permission (Bug #35368) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 28 Aug 2014 16:09:28 +0200
+
 univention-config-registry (9.0.6-9) unstable; urgency=low
 
   * Set the default for ldap/client/retry/count to 10 (Bug #34293)
