--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (10.0.1-5) unstable; urgency=low
+
+  * skip writing cache if process has no write permission (Bug #35368) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 28 Aug 2014 16:15:44 +0200
+
 univention-config-registry (10.0.1-4) unstable; urgency=low
 
   * Added multiarch support (Bug #35138)
