Moved setup of apache startsite on EC2 to an earlier stage (Bug #35721)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53138 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-53) unstable; urgency=low
+
+  * Moved setup of apache startsite on EC2 to an earlier stage (Bug #35721) 
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 28 Aug 2014 17:15:56 +0200
+
 univention-system-setup (7.0.69-52) unstable; urgency=low
 
   * Bug #35587: fix suggestion of FQDN build from value entered in the
