* Do not show Firefox data submission policy popup during system setup (Bug #35605)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53139 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.69-54) unstable; urgency=low
+
+  * Do not show Firefox data submission policy popup during 
+    system setup (Bug #35605)
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 28 Aug 2014 17:21:10 +0200
+
 univention-system-setup (7.0.69-53) unstable; urgency=low
 
   * Moved setup of apache startsite on EC2 to an earlier stage (Bug #35721) 
