* Remove winbind4 from dependency list (Bug #35319)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53142 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-squid/debian/changelog
+++ b/services/univention-squid/debian/changelog
@@ -1,3 +1,9 @@
+univention-squid (8.0.1-1) unstable; urgency=medium
+
+  * Remove winbind4 from dependency list (Bug #35319)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 28 Aug 2014 18:54:33 +0200
+
 univention-squid (8.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35147) 
