--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (1.0.1-1) unstable; urgency=low
+
+  * Bug #35744: Usability improvements
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 29 Aug 2014 09:22:01 +0200
+
 ucs-ec2-tools (1.0.0-1) unstable; urgency=low
 
   * Starting UCS 4.0 development (Bug #35148)
