--- a/services/univention-pkgdb/debian/changelog
+++ b/services/univention-pkgdb/debian/changelog
@@ -1,3 +1,9 @@
+univention-pkgdb (8.0.0-4) unstable; urgency=low
+
+  * fixed pyshared/univention/pkgdb.py (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 29 Aug 2014 09:54:56 +0200
+
 univention-pkgdb (8.0.0-3) unstable; urgency=low
 
   * added postgresql 9.1 config templates (Bug #35147) 
