fixed init file (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53153 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-dhcp/debian/changelog
+++ b/services/univention-dhcp/debian/changelog
@@ -1,3 +1,9 @@
+univention-dhcp (9.0.0-2) unstable; urgency=low
+
+  * fixed init file (Bug #35138) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 29 Aug 2014 10:26:44 +0200
+
 univention-dhcp (9.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35138) 
