--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-replication (8.0.0-2) unstable; urgency=low
+
+  * more BUILTIN_OIDS (Bug #35144) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 29 Aug 2014 11:17:42 +0200
+
 univention-directory-replication (8.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35144)
