Bug #35145: update copyrights
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53156 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-reboot/debian/changelog
+++ b/management/univention-management-console-module-reboot/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-reboot (4.0.0-2) unstable; urgency=low
+
+  * Bug #35145: update copyrights
+
+ -- Florian Best <best@univention.de>  Fri, 29 Aug 2014 11:16:30 +0200
+
 univention-management-console-module-reboot (4.0.0-1) unstable; urgency=low
 
   * Bug #35145: Start UCS 4.0 development
