--- a/management/univention-management-console-module-lib/debian/changelog
+++ b/management/univention-management-console-module-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-lib (4.0.0-2) unstable; urgency=low
+
+  * Bug #35145: update copyrights
+
+ -- Florian Best <best@univention.de>  Fri, 29 Aug 2014 11:17:08 +0200
+
 univention-management-console-module-lib (4.0.0-1) unstable; urgency=low
 
   * Bug #35145: Start UCS 4.0 development
