--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,13 @@
+univention-virtual-machine-manager-daemon (4.0.0-5) unstable; urgency=low
+
+  * WIP: Integration of cloud instance management with libcloud (Bug #32842)
+    + Create, destroy instances
+    + Start, reboot instances
+    + Connection error handling
+    + More statistics
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 29 Aug 2014 16:02:40 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-4) unstable; urgency=low
 
   * Add Cloud Connection into UVMM frontend (Bug #32842)
