--- a/management/univention-directory-notifier/debian/changelog
+++ b/management/univention-directory-notifier/debian/changelog
@@ -1,3 +1,11 @@
+univention-directory-notifier (8.0.1-1) unstable; urgency=low
+
+  * The notifier join script now waits for the first initialization of
+    the listener on a DC master. This avoids a race condition during the
+    DC master installation (Bug #35723)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 29 Aug 2014 16:10:12 +0200
+
 univention-directory-notifier (8.0.0-2) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30946)
