* The notifier join script now waits for the first initialization of   the listener on a DC master. This avoids a race condition during the   DC master installation (Bug #35723)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53168 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-notifier/debian/changelog
+++ b/management/univention-directory-notifier/debian/changelog
@@ -1,3 +1,11 @@
+univention-directory-notifier (9.0.1-1) unstable; urgency=low
+
+  * The notifier join script now waits for the first initialization of
+    the listener on a DC master. This avoids a race condition during the
+    DC master installation (Bug #35723)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 29 Aug 2014 16:10:12 +0200
+
 univention-directory-notifier (9.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35144) 
