--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.1-1) unstable; urgency=medium
+
+  * 10_ldap/25reconnect_uldap: wait for subprocess call (Bug #35741)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sat, 30 Aug 2014 06:35:53 +0200
+
 ucs-test (5.0.0-9) unstable; urgency=medium
 
   * Another test case for Bug #35647
