--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (9.0.42-3) unstable; urgency=medium
+
+  * The HTTP HEAD query of the updater now also transfers the component
+    installation status (Bug #35645)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 01 Sep 2014 07:39:21 +0200
+
 univention-updater (9.0.42-2) unstable; urgency=low
 
   * Bug #35508: increased required free disk space for update in preup.sh
