* Build only Python 2.6 modules (Bug #34781)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53177 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.42-4) unstable; urgency=low
+
+  * Build only Python 2.6 modules (Bug #34781)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 01 Sep 2014 07:49:02 +0200
+
 univention-updater (9.0.42-3) unstable; urgency=medium
 
   * The HTTP HEAD query of the updater now also transfers the component
