--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (10.0.1-1) unstable; urgency=medium
+
+  * The HTTP HEAD query of the updater now also transfers the component
+    installation status (Bug #35645)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 01 Sep 2014 07:39:21 +0200
+
 univention-updater (10.0.0-6) unstable; urgency=low
 
   * Set UCRVs version/* (Bug #35312, Bug #35635)
