* Adjust postup.sh to new univention-check-templates return codes   (Bug #34972)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53180 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (9.0.42-5) unstable; urgency=low
+
+  * Adjust postup.sh to new univention-check-templates return codes
+    (Bug #34972)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 01 Sep 2014 08:17:59 +0200
+
 univention-updater (9.0.42-4) unstable; urgency=low
 
   * Build only Python 2.6 modules (Bug #34781)
