* Adjust postup.sh to new univention-check-templates return codes   (Bug #34972)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53181 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (10.0.2-1) unstable; urgency=low
+
+  * Adjust postup.sh to new univention-check-templates return codes
+    (Bug #34972)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 01 Sep 2014 08:17:59 +0200
+
 univention-updater (10.0.1-1) unstable; urgency=medium
 
   * The HTTP HEAD query of the updater now also transfers the component
