--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-6) unstable; urgency=low
+
+  * Add python-libcloud dependency (Bug #32842) 
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 01 Sep 2014 13:13:30 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-5) unstable; urgency=low
 
   * WIP: Integration of cloud instance management with libcloud (Bug #32842)
