--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-replication (8.0.0-3) unstable; urgency=low
+
+  * fixed BUILTIN_OIDS (Bug #35144) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 01 Sep 2014 13:28:44 +0200
+
 univention-directory-replication (8.0.0-2) unstable; urgency=low
 
   * more BUILTIN_OIDS (Bug #35144) 
