fixed iter_templates in univention-check-templates (Bug #35202)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53198 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (9.0.6-12) unstable; urgency=low
+
+  * fixed iter_templates in univention-check-templates (Bug #35202) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 01 Sep 2014 16:03:10 +0200
+
 univention-config-registry (9.0.6-11) unstable; urgency=low
 
   * fixed iter_templates in univention-check-templates (Bug #35202) 
