--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (10.0.1-6) unstable; urgency=low
+
+  * fixed iter_templates in univention-check-templates (Bug #35202) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 01 Sep 2014 16:02:10 +0200
+
 univention-config-registry (10.0.1-5) unstable; urgency=low
 
   * skip writing cache if process has no write permission (Bug #35368) 
