* Bug #35587: Bug #35582: text changes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53204 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.33-1) unstable; urgency=low
+
+  * Bug #35587: Bug #35582: text changes
+
+ -- Florian Best <best@univention.de>  Mon, 01 Sep 2014 17:10:25 +0200
+
 univention-system-setup (8.0.32-2) unstable; urgency=low
 
   * Moved setup of apache startsite on EC2 to an earlier stage in the boot
