--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (9.0.0-3) unstable; urgency=medium
+
+  * dh_pysupport is not used any longer by default (Bug #35320)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 01 Sep 2014 17:36:22 +0200
+
 univention-samba (9.0.0-2) unstable; urgency=medium
 
   * Remove conflict against samba-dsdb-modules (Bug #35320)
