--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (9.0.0-3) unstable; urgency=medium
+
+  * Adjust to python-ldap 2.4 (Bug #35320)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 01 Sep 2014 19:59:33 +0200
+
 univention-ad-connector (9.0.0-2) unstable; urgency=medium
 
   * Another python2.7 fix (Bug #35320)
