--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (9.0.0-6) unstable; urgency=medium
+
+  * Fix error messages about undefined wins support parameter (Bug #35766)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 01 Sep 2014 20:43:56 +0200
+
 univention-samba (9.0.0-5) unstable; urgency=medium
 
   * Temporary workaround for Bug #35766
