--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-65) unstable; urgency=medium
+
+  * admember.py: ignore domain name spelling (Bug #35757)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 02 Sep 2014 07:54:02 +0200
+
 univention-lib (3.0.26-64) unstable; urgency=low
 
   * Bug #35729: Fix stall in dpkg status pipe reading code
