--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (4.0.2-1) unstable; urgency=medium
+
+  * admember.py: ignore domain name spelling (Bug #35757)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 02 Sep 2014 07:54:02 +0200
+
 univention-lib (4.0.1-3) unstable; urgency=low
 
   * fixed python version in hashbang (Bug #34091) 
