--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.34-1) unstable; urgency=low
+
+  * Bug #35735: Install univention-grub
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 02 Sep 2014 08:49:30 +0200
+
 univention-system-setup (8.0.33-1) unstable; urgency=low
 
   * Bug #35587: Bug #35582: text changes
