* Using check_raid from nagios-plugins-contrib * instead of check_linux_raid (Bug #35265)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53224 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios-raid/debian/changelog
+++ b/nagios/univention-nagios-raid/debian/changelog
@@ -1,3 +1,10 @@
+univention-nagios-raid (4.0.0-2) unstable; urgency=low
+
+  * Using check_raid from nagios-plugins-contrib
+  * instead of check_linux_raid (Bug #35265)
+
+ -- Alexander Kramer <kramer@univention.de>  Tue, 02 Sep 2014 09:43:11 +0200
+
 univention-nagios-raid (4.0.0-1) unstable; urgency=low
 
   * Starting UCS 4.0 development (Bug #35265)
