* fixed copyright date in var/www/ucs-overview/js/initialstartsite.js     Bug #35267
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53225 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.0.35-1) unstable; urgency=low
+
+  * fixed copyright date in var/www/ucs-overview/js/initialstartsite.js
+    Bug #35267
+
+ -- Felix Botner <botner@univention.de>  Tue, 02 Sep 2014 10:21:39 +0200
+
 univention-system-setup (8.0.34-1) unstable; urgency=low
 
   * Bug #35735: Install univention-grub
