* Bug #35683: Update local files after extracting initial archive
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53227 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.0.0-4) unstable; urgency=low
+
+  * Bug #35683: Update local files after extracting initial archive
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 02 Sep 2014 10:24:50 +0200
+
 univention-management-console-module-appcenter (4.0.0-3) unstable; urgency=low
 
   * Bug #35683: Add a starting archive for ini files that can be unpackaged
