--- a/base/univention-system-setup/usr/share/locale/de/LC_MESSAGES/univention-system-setup-scripts.po
+++ b/base/univention-system-setup/usr/share/locale/de/LC_MESSAGES/univention-system-setup-scripts.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-07-22 20:15+0200\n"
+"POT-Creation-Date: 2014-09-01 12:11+0200\n"
 "PO-Revision-Date: 2012-02-20 14:41+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,11 +18,11 @@ msgstr ""
 
 #: usr/lib/univention-system-setup/scripts/setup-join.sh:167
 msgid "Domain join"
-msgstr "Domänen-Join"
+msgstr "Domänenbeitritt"
 
 #: usr/lib/univention-system-setup/scripts/setup-join.sh:173
 msgid "Preparing domain join"
-msgstr "Vorbereitung des Domänen-Joins"
+msgstr "Vorbereitung des Domänenbeitritts"
 
 #: usr/lib/univention-system-setup/scripts/setup-join.sh:212
 msgid "Configure"
@@ -91,6 +91,14 @@ msgstr "Einrichten der Zeitzonen"
 #: usr/lib/univention-system-setup/scripts/40_ssl/10ssl:50
 msgid "Generating SSL certificate"
 msgstr "Erstellen der SSL-Zertifikate"
+
+#: usr/lib/univention-system-setup/scripts/50_software/20upgrade:42
+msgid "Upgrading the system"
+msgstr "Aktualisiere das System"
+
+#: usr/lib/univention-system-setup/scripts/50_software/20upgrade:43
+msgid "This might take a while depending on the number of pending updates."
+msgstr "Je nach Anzahl der verfügbaren Aktualisierungen kann das eine Weile dauern."
 
 #~ msgid "Configuring IPv4 network devices"
 #~ msgstr "Einrichten der IPv4-Netzwerkgeräte"
