* Fixed guess_ad_domain_language function() and call it after the ssl   decision has been made (Bug #35572)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53230 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-ad-connector (9.0.1-1) unstable; urgency=medium
+
+  * Fixed guess_ad_domain_language function() and call it after the ssl
+    decision has been made (Bug #35572)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 02 Sep 2014 10:32:36 +0200
+
 univention-ad-connector (9.0.0-3) unstable; urgency=medium
 
   * Adjust to python-ldap 2.4 (Bug #35320)
