fixed XS-Python-Version (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53232 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-firewall/debian/changelog
+++ b/base/univention-firewall/debian/changelog
@@ -1,3 +1,9 @@
+univention-firewall (7.0.0-2) unstable; urgency=low
+
+  * fixed XS-Python-Version (Bug #35138) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 02 Sep 2014 11:06:18 +0200
+
 univention-firewall (7.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35138)
