--- a/base/univention-policy/debian/changelog
+++ b/base/univention-policy/debian/changelog
@@ -1,3 +1,9 @@
+univention-policy (6.0.2-6) unstable; urgency=low
+
+  * fixed XS-Python-Version (Bug #35138) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 02 Sep 2014 12:14:26 +0200
+
 univention-policy (6.0.2-5) unstable; urgency=low
 
   * Added multiarch support (Bug #35138)
