--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (10.0.10-1) unstable; urgency=medium
+
+  * Allow ’ in group names. This is needed for default French groups
+    (Bug #35521)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 02 Sep 2014 13:05:12 +0200
+
 univention-directory-manager-modules (10.0.9-1) unstable; urgency=medium
 
   * Allow the modification of mailAlternativeAddress in AD member mode
