* Change regular expression for group names to unicode (Bug #35521)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53241 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (10.0.11.1) unstable; urgency=medium
+
+  * Change regular expression for group names to unicode (Bug #35521)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 02 Sep 2014 13:37:25 +0200
+
 univention-directory-manager-modules (10.0.10-1) unstable; urgency=medium
 
   * Allow ’ in group names. This is needed for default French groups
