--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,4 +1,11 @@
-univention-directory-manager-modules (10.0.11.1) unstable; urgency=medium
+univention-directory-manager-modules (10.0.12-1) unstable; urgency=medium
+
+  * Don't break UDM if more than one : is set in automountInformation
+    (Bug #34541)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 02 Sep 2014 14:02:57 +0200
+
+univention-directory-manager-modules (10.0.11-1) unstable; urgency=medium
 
   * Change regular expression for group names to unicode (Bug #35521)
 
