Bug #35148 EC2: Fix UCS-4.0 adaption
Strip trailing whitespace: sed -i -e '${/^$/d};s/[\t ]+$//' *.cfg

Fix commented lines.

Remove left-overs from conversion to utils.sh

Update -> Upgrade

Remove parenthesis from 'wait_for_reboot()' invocation.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53252 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (1.0.1-2) unstable; urgency=low
+
+  * Bug #35148: Fix UCS-4.0 adaption
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 02 Sep 2014 14:12:06 +0200
+
 ucs-ec2-tools (1.0.1-1) unstable; urgency=low
 
   * Bug #35744: Usability improvements
