Bug #35733 EC2: Fix reboot for broken pre-UCS-4.0-interim1 EC2 images
Undo insserv re-ordering breaking reboot.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53254 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,6 +1,7 @@
 ucs-ec2-tools (1.0.1-2) unstable; urgency=low
 
   * Bug #35148: Fix UCS-4.0 adaption
+  * Bug #35733: Fix reboot for broken pre-UCS-4.0-interim1 EC2 images
 
  -- Philipp Hahn <hahn@univention.de>  Tue, 02 Sep 2014 14:12:06 +0200
 
