--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios (8.0.0-2) unstable; urgency=low
+
+  * FIX broken apache config (Bug #35078)
+
+ -- Alexander Kramer <kramer@univention.de>  Tue, 02 Sep 2014 15:43:07 +0200
+
 univention-nagios (8.0.0-1) unstable; urgency=low
 
   * Starting UCS 4.0 development (Bug #35265)
